--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,32 @@
 .wrapper {
     width: 1200px;
+    margin: 0 auto;
 }
 
 .titel {
     text-align: center;
 }
 
+.titel-2 {
+    margin-top: 100px;
+}
+
 .text-1 {
     font-size: 20px;
     background-color: #ccc;
-}
+
+    margin: 50px 25px 70px 35px;
+
+    padding: 25px 15px;
+   
+    /* padding-top: 50px;
+    padding-right: 20px;
+    padding-bottom: 70px;
+    padding-left: 35px; */
+
+    /* border: 3px solid black; */
+    
+}   
 
 .text-2 {
     font-size: 18px;
