--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 .wrapper {
     width: 1200px;
     margin: 0 auto;
@@ -14,18 +18,16 @@
 .text-1 {
     font-size: 20px;
     background-color: #ccc;
-
-    margin: 50px 25px 70px 35px;
-
-    padding: 25px 15px;
-   
-    /* padding-top: 50px;
-    padding-right: 20px;
-    padding-bottom: 70px;
-    padding-left: 35px; */
-
-    /* border: 3px solid black; */
     
+    width: 500px;
+    height: 500px;
+    
+    padding: 50px;
+
+    border: 20px solid tomato ;
+
+    overflow-y: auto;
+    /* overflow: hidden; */
 }   
 
 .text-2 {
